# tauri-plugin-printerx

./: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  build.rs  package.json
.claude/: settings.local.json
.tmp_printerx/: classes.txt
android/: README.md  build.gradle.kts  proguard-rules.pro
android/libs/: printerx-1.0.17.aar
android/src/main/: AndroidManifest.xml
android/src/main/java/com/plugin/printerx/: PrinterxPlugin.kt
dist-js/: index.cjs  index.d.ts  index.js
examples/tauri-app/: NETWORK_PRINTER_TEST.md  package.json
examples/tauri-app/.claude/: settings.local.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
examples/tauri-app/src/lib/: BluetoothPrinterTest.svelte  NetworkPrinterTest.svelte
guest-js/: index.ts
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: connect_printer.toml  cut_paper.toml  disconnect_printer.toml  feed_line.toml  get_cash_drawer_status.toml  get_printer_info.toml  get_printer_status.toml  init_printer.toml  lcd_show_text.toml  open_cash_drawer.toml  print_esc_pos.toml  print_esc_pos_network.toml  print_line.toml  print_text.toml  register_listener.toml  remove_listener.toml  scan_devices.toml  start_cash_drawer_monitor.toml  stop_cash_drawer_monitor.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  lib.rs  mobile.rs
